--- a/Images/Images/Base.lproj/Main.storyboard
+++ b/Images/Images/Base.lproj/Main.storyboard
@@ -43,48 +43,51 @@
                                         <rect key="frame" x="0.0" y="0.0" width="414" height="245"/>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     </imageView>
-                                    <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" contentInsetAdjustmentBehavior="never" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="4Ry-5J-rxE">
-                                        <rect key="frame" x="0.0" y="68.000000000000014" width="414" height="145.33333333333337"/>
-                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" pagingEnabled="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" contentInsetAdjustmentBehavior="never" dataMode="prototypes" prefetchingEnabled="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4Ry-5J-rxE">
+                                        <rect key="frame" x="0.0" y="68.000000000000014" width="414" height="177.33333333333337"/>
+                                        <color key="backgroundColor" cocoaTouchSystemColor="lightTextColor"/>
                                         <color key="tintColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="qDR-qz-8I6">
-                                            <size key="itemSize" width="250" height="116.5"/>
+                                            <size key="itemSize" width="415" height="176"/>
                                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                             <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                             <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                         </collectionViewFlowLayout>
                                         <cells>
                                             <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="imageCollectionView" id="5EG-18-bQs" customClass="ImageCollectionViewCell" customModule="Images" customModuleProvider="target">
-                                                <rect key="frame" x="0.0" y="14.333333333333334" width="250" height="116.5"/>
+                                                <rect key="frame" x="0.0" y="0.66666666666666663" width="415" height="176"/>
                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
-                                                    <rect key="frame" x="0.0" y="0.0" width="250" height="116.5"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="415" height="176"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <subviews>
-                                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="v6m-du-Ynr">
-                                                            <rect key="frame" x="0.0" y="0.0" width="250" height="116"/>
+                                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalCompressionResistancePriority="749" translatesAutoresizingMaskIntoConstraints="NO" id="v6m-du-Ynr">
+                                                            <rect key="frame" x="18" y="0.0" width="379" height="176"/>
                                                             <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                             <constraints>
-                                                                <constraint firstAttribute="width" constant="250" id="6fG-ji-oF0"/>
+                                                                <constraint firstAttribute="width" constant="379" id="gIO-QJ-tZP"/>
                                                             </constraints>
                                                         </imageView>
                                                         <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="5j7-Nc-gbs">
-                                                            <rect key="frame" x="107" y="39.666666666666664" width="37" height="36.999999999999993"/>
+                                                            <rect key="frame" x="189" y="69" width="37" height="37"/>
                                                             <color key="color" red="1" green="0.14913141730000001" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                         </activityIndicatorView>
                                                     </subviews>
                                                 </view>
                                                 <constraints>
-                                                    <constraint firstItem="v6m-du-Ynr" firstAttribute="leading" secondItem="5EG-18-bQs" secondAttribute="leading" id="E7h-v4-iIB"/>
-                                                    <constraint firstItem="5j7-Nc-gbs" firstAttribute="centerY" secondItem="v6m-du-Ynr" secondAttribute="centerY" id="LQh-hm-mxf"/>
-                                                    <constraint firstItem="v6m-du-Ynr" firstAttribute="top" secondItem="5EG-18-bQs" secondAttribute="top" id="NsA-g6-N0h"/>
-                                                    <constraint firstItem="5j7-Nc-gbs" firstAttribute="centerX" secondItem="v6m-du-Ynr" secondAttribute="centerX" id="bzd-KH-RbI"/>
-                                                    <constraint firstAttribute="bottom" secondItem="v6m-du-Ynr" secondAttribute="bottom" id="o12-vp-B5H"/>
+                                                    <constraint firstItem="v6m-du-Ynr" firstAttribute="leading" secondItem="5EG-18-bQs" secondAttribute="leading" constant="18" id="FYh-ML-hOC"/>
+                                                    <constraint firstItem="5j7-Nc-gbs" firstAttribute="centerX" secondItem="5EG-18-bQs" secondAttribute="centerX" id="cwU-LT-ww6"/>
+                                                    <constraint firstItem="5j7-Nc-gbs" firstAttribute="centerY" secondItem="5EG-18-bQs" secondAttribute="centerY" id="eT8-xN-6uW"/>
+                                                    <constraint firstAttribute="bottom" secondItem="v6m-du-Ynr" secondAttribute="bottom" id="lAk-e1-I2T"/>
+                                                    <constraint firstAttribute="trailing" secondItem="v6m-du-Ynr" secondAttribute="trailing" constant="18" id="lco-zj-yv9"/>
+                                                    <constraint firstItem="v6m-du-Ynr" firstAttribute="top" secondItem="5EG-18-bQs" secondAttribute="top" id="sYt-UO-Ub7"/>
                                                 </constraints>
-                                                <size key="customSize" width="250" height="116.5"/>
                                                 <connections>
+                                                    <outlet property="leftConstraint" destination="FYh-ML-hOC" id="aCt-N7-7eZ"/>
                                                     <outlet property="pictureImageView" destination="v6m-du-Ynr" id="yFn-hC-HqV"/>
+                                                    <outlet property="rightConstraint" destination="lco-zj-yv9" id="Zge-g8-xcR"/>
                                                     <outlet property="spinner" destination="5j7-Nc-gbs" id="Bx1-st-bRn"/>
+                                                    <outlet property="widthImageConstraint" destination="gIO-QJ-tZP" id="20T-gD-egv"/>
                                                 </connections>
                                             </collectionViewCell>
                                         </cells>
@@ -95,12 +98,12 @@
                                     </collectionView>
                                 </subviews>
                                 <constraints>
+                                    <constraint firstAttribute="bottom" secondItem="4Ry-5J-rxE" secondAttribute="bottom" id="6It-Vt-fl0"/>
                                     <constraint firstItem="bYD-VU-KNK" firstAttribute="top" secondItem="Fau-QN-ojd" secondAttribute="top" id="EpS-TR-dTU"/>
+                                    <constraint firstAttribute="trailing" secondItem="4Ry-5J-rxE" secondAttribute="trailing" id="PMx-FD-WbD"/>
                                     <constraint firstItem="bYD-VU-KNK" firstAttribute="leading" secondItem="Fau-QN-ojd" secondAttribute="leading" id="Pi5-ni-SVX"/>
-                                    <constraint firstAttribute="bottom" secondItem="4Ry-5J-rxE" secondAttribute="bottom" constant="32" id="iRf-au-jxx"/>
+                                    <constraint firstItem="4Ry-5J-rxE" firstAttribute="leading" secondItem="Fau-QN-ojd" secondAttribute="leading" id="fxc-ra-VN9"/>
                                     <constraint firstAttribute="bottom" secondItem="bYD-VU-KNK" secondAttribute="bottom" id="kla-Cl-Fo8"/>
-                                    <constraint firstItem="4Ry-5J-rxE" firstAttribute="leading" secondItem="Fau-QN-ojd" secondAttribute="leading" id="ldf-sa-War"/>
-                                    <constraint firstAttribute="trailing" secondItem="4Ry-5J-rxE" secondAttribute="trailing" id="om3-6k-dVb"/>
                                     <constraint firstAttribute="trailing" secondItem="bYD-VU-KNK" secondAttribute="trailing" id="x8T-EL-Pej"/>
                                 </constraints>
                             </view>
@@ -172,7 +175,7 @@
                         <color key="backgroundColor" red="0.4756349325" green="0.47564673419999998" blue="0.47564041610000002" alpha="0.48755886130136988" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="Fau-QN-ojd" firstAttribute="top" secondItem="MA1-Z6-EM2" secondAttribute="top" id="2pu-UF-85S"/>
-                            <constraint firstItem="4Ry-5J-rxE" firstAttribute="top" secondItem="WxL-rk-o1e" secondAttribute="bottom" constant="8" id="4jZ-He-zID"/>
+                            <constraint firstItem="4Ry-5J-rxE" firstAttribute="top" secondItem="WxL-rk-o1e" secondAttribute="bottom" constant="8" id="BOd-Sa-14D"/>
                             <constraint firstItem="WxL-rk-o1e" firstAttribute="top" secondItem="kyM-B2-r2j" secondAttribute="top" id="IcL-aU-tgb"/>
                             <constraint firstItem="lk9-yp-lfp" firstAttribute="leading" secondItem="kyM-B2-r2j" secondAttribute="leading" id="Jd9-K7-0AT"/>
                             <constraint firstItem="Fau-QN-ojd" firstAttribute="leading" secondItem="kyM-B2-r2j" secondAttribute="leading" id="K1V-kX-NJw"/>
@@ -196,7 +199,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="A3p-lr-rXq" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2901.5999999999999" y="113.79310344827587"/>
+            <point key="canvasLocation" x="2901.449275362319" y="113.31521739130436"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="mzv-ts-vYz">
